--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Yellowtail&display=swap');
 html {
     box-sizing: border-box;
+    scroll-behavior: smooth;
 }
 
 body {
